--- a/demos/index.html
+++ b/demos/index.html
@@ -3,19 +3,17 @@
   <head>
     <meta charset="utf-8">
     <title>Vega Demos</title>
-    <script type="text/javascript" charset="utf-8" src="http://d3js.org/d3.v3.min.js" ></script>
-    <script type="text/javascript" charset="utf-8" src="http://vega.github.io/vega/vega.min.js"></script>
-    <script type="text/javascript" charset="utf-8" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script type="text/javascript" charset="utf-8" src="http://cchandurkar.github.io/trails/trails.min.js"></script>
+    <script type="text/javascript" src="http://d3js.org/d3.v3.min.js"></script>
+    <script type="text/javascript" src="http://vega.github.io/vega/vega.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script type="text/javascript" src="http://cchandurkar.github.io/trails/trails.min.js"></script>
     <link rel="stylesheet" href="http://cchandurkar.github.io/trails/trails.css" media="screen" charset="utf-8">
   </head>
   <body>
     <div id="chart"></div>
     <div id="controls"></div>
     <script type="text/javascript">
-
     function parse(spec) {
-
       vg.parse.spec(spec, function(chart) {
 
         // Create Chart
@@ -31,66 +29,66 @@
         // Listen to load events
         trail.listen('onSnapshotChanged', function(signalData){
 
-          // This data has information about every lable that was swapped
-          // while dragging the `src`
-          signalData.forEach(function(data){
+          // Update Signals
+          matrixChart
+            .signal("src", signalData.src)
+            .signal("dest", signalData.dest)
+            .update();
 
-
-            console.log("srcOrder", data.src.order);
-            console.log("destOrder", data.dest.order);
-
-            // Swap order since signal changed it when triggered
-            var tempOrder = data.src.order;
-            data.src.order = data.dest.order;
-            data.dest.order = tempOrder;
-
-
-            // Update Signals
-            matrixChart
-              .signal("src", data.src)
-              .signal("dest", data.dest)
-              .update();
-
-            // Reset Signals
-            matrixChart
-              .signal("src", {})
-              .signal("dest", {})
-              .signal("destOrder", undefined)
-              .signal("dragging", undefined)
-              .update();
-
-          });
+          // Update src and dest to
+          matrixChart
+            .signal("src", {})
+            .signal("dest", {})
+            .signal("destOrder", undefined)
+            .signal("dragging", undefined)
+            .update();
 
         });
 
-        // Hold labels swapped while dragging
-        var signalData = [];
 
-        // Whenever dest is changed
-        matrixChart.onSignal("destOrder", function(signal, value){
-          if(value){
-            var src = (JSON.parse(JSON.stringify(matrixChart.signal("src"))));
-            var dest = (JSON.parse(JSON.stringify(matrixChart.signal("dest"))));
-            if(dest._id && src._id && dest._id != src._id){
-              signalData.push({ src: src, dest: dest });
+        // hold signal data
+        var signalData = {
+          src: null,
+          dest: null
+        };
+
+        // Every time src signal changed (mousedown or mouseup)
+        // Check if it is mousedown and set src data
+        matrixChart.onSignal("src", function(signal, value){
+
+          if(value._id && !signalData.src){
+            signalData.src = (JSON.parse(JSON.stringify(value)));
+            console.log("src", (JSON.parse(JSON.stringify(value))));
+          } else {
+            if(signalData.src && signalData.dest && signalData.src._id && signalData.dest._id){
+
+              // Cloned to avoid Hot-referencing
+              var clonedSignalData = (JSON.parse(JSON.stringify(signalData)));
+
+              // Capture
+              trail.captureWithImage(clonedSignalData, matrixChart.toImageURL());
+
+              // Reset Data
+              signalData.src = null;
+              signalData.dest = null;
+
             }
           }
         });
 
-        // Whenever src changes to `{}`; dragging finishes; capture
-        matrixChart.onSignal("src", function(signal, value){
-          if(!value._id && signalData.length){
-            trail.captureWithImage(signalData, matrixChart.toImageURL());
-            signalData = [];
+        // Every time dest signal changed (on hovering over labels)
+        // Check if it is dragging some label (check src is set) if set keep updating dest
+        matrixChart.onSignal("dest", function(signal, value){
+          if(value._id && signalData.src && signalData.src._id != value._id){
+            console.log("dest", (JSON.parse(JSON.stringify(value))));
+            signalData.dest = (JSON.parse(JSON.stringify(value)));
           }
         });
 
+
       });
-
     }
-
     parse("./specs/reorderMatrix.json");
-
     </script>
   </body>
 </html>
