updated crossfilter example

--- a/demos/crossfilter.html
+++ b/demos/crossfilter.html
@@ -16,6 +16,16 @@
     function parse(spec) {
       vg.parse.spec(spec, function(chart) {
 
+        // Linking Example
+        /// Multi trails see @cell
+        // Capture Ratio problem
+        // Gallery inversion colors from parent to child
+        // checkpoints
+        // onSnapshotChanged
+        // Invserse Action previous state
+        // track stateaccess number of times
+
+
         // Create Chart
         var crossfilterChart = chart({el:"#chart"}).update();
 
